// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
    showclearicononempty="true"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
        </span>
        <!---->
        <div
          class="t-input__wrap t-select__input"
          modelvalue=""
          style="display: none;"
        >
          <div
            class="t-input"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon t-input__clear"
        >
          <svg
            class="t-icon t-icon-close-circle-filled t-input__suffix-clear"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect lazyVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
    showclearicononempty="true"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="1"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      A
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="2"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      B
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
        </span>
        <!---->
        <div
          class="t-input__wrap t-select__input"
          modelvalue=""
          style="display: none;"
        >
          <div
            class="t-input"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon t-input__clear"
        >
          <svg
            class="t-icon t-icon-close-circle-filled t-input__suffix-clear"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect prefixVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
    showclearicononempty="false"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="group1"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      开发一组
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="group2"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      开发二组
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <span
          class="t-input__prefix t-input__prefix-icon"
        >
          
          
          
          <svg
            class="t-icon t-icon-browse"
          >
            <use
              href="#t-icon-browse"
            />
          </svg>
          
          
          
        </span>
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请输入"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon t-input__clear"
        >
          <svg
            class="t-icon t-icon-close-circle-filled t-input__suffix-clear"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect valuedisplayVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-valuedisplay"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
    showclearicononempty="true"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          
          
          
          () 
          
          
          
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon t-input__clear"
        >
          <svg
            class="t-icon t-icon-close-circle-filled t-input__suffix-clear"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty tree-select-multiple"
    showclearicononempty="true"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                    modelvalue="false"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                    modelvalue="false"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-input--prefix t-input--suffix t-tag-input"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          
          <!---->
        </span>
        <!---->
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder=""
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          type="text"
        />
        <!---->
        <!---->
        <span
          class="t-input__suffix t-input__suffix-icon t-input__clear"
        >
          <svg
            class="t-icon t-icon-close-circle-filled t-input__suffix-clear"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;
